--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -19,8 +19,8 @@
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-#:     font_family      Operator Mono Book
-#:     bold_font        Operator Mono Medium
+#:     font_family      Fira Code Regular Nerd Font Complete 
+#:     bold_font        Fira Code Medium Nerd Font Complete
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
