--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1907,6 +1907,13 @@
 
 #:     map ctrl+alt+z toggle_layout stack
 #: }}}
+#
+map ctrl+left resize_window narrower
+map ctrl+right resize_window wider
+map ctrl+up resize_window taller
+map ctrl+down resize_window shorter 3
+# reset all windows in the tab to default sizes
+map ctrl+home resize_window reset
 
 #: Font sizes {{{
 
